Refactor Dataset class

--- a/notebooks/preprocess_depresion2019.ipynb
+++ b/notebooks/preprocess_depresion2019.ipynb
@@ -11,27 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     " %load_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -60,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"D:/v1ktop/Drive-INAOE/Code/data_aumentation_for_author_profiling/word_level_da/\")\n"
+    "sys.path.append(\"D:/v1ktop/Drive-INAOE/Code/data_aumentation_for_author_profiling/\")\n"
    ]
   },
   {
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,41 +216,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "man_dir=\"D:/corpus/DepresionEriskCollections/2018/\"\n",
-    "dest_dir=\"D:/corpus/DepresionEriskCollections/2018V2/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "process_data_files.prep_anorexia_data(man_dir+\"original_prep_chunks/\", man_dir+\"test_golden_truth.txt\", \n",
-    "                                     dest_dir+\"prep_chunks/\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,22 +224,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from preprocesing.load_datasets import Dataset"
+    "from word_level_da.preprocessing.load_data import Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\v1ktop\\Drive-INAOE\\Code\\data_aumentation_for_author_profiling\\word_level_da\\\n"
+     ]
+    }
+   ],
    "source": [
     "data= Dataset(key=\"erisk18_dev\", chunking=False, remove_end=True)"
    ]
@@ -306,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "pos_docs=data.get_dataset(folder_name=\"prep_chunks\", truth_name=\"train_golden_truth.txt\",\n",
-    "                          partition=\"training\", chunks=False)"
+    "pos_docs=data.get_dataset(folder_name=\"prep_chunks_filtered\", truth_name=\"train_golden_truth_filtered.txt\",\n",
+    "                          partition=\"training\")"
    ]
   },
   {
